# introduction-to-algorithms-rust

divide_and_conquer/: Cargo.toml
foundations/src/binary_search/: main.rs
foundations/src/insertion_sort/: main.rs
sorting_algorithms/: Cargo.toml
sorting_algorithms/src/binary_adder/: main.rs
sorting_algorithms/src/binary_search/: main.rs
sorting_algorithms/src/bubble_sort/: main.rs
sorting_algorithms/src/insertion_sort/: main.rs
sorting_algorithms/src/merge_sort/: main.rs
sorting_algorithms/src/num_inversions/: main.rs
sorting_algorithms/src/selection_sort/: main.rs
sorting_algorithms/src/two_sum/: main.rs
