[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "insertion_sort"
path = "src/insertion_sort/main.rs"

[[bin]]
name = "binary_adder"
path = "src/binary_adder/main.rs"

[[bin]]
name = "selection_sort"
path = "src/selection_sort/main.rs"

[[bin]]
name = "merge_sort"
path = "src/merge_sort/main.rs"

[[bin]]
name = "binary_search"
path = "src/binary_search/main.rs"

[[bin]]
name = "bubble_sort"
path = "src/bubble_sort/main.rs"